<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageViewRecord"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorAccent"
        android:src="@drawable/ic_addphoto"/>
    <EditText
        android:id="@+id/edtName"
        android:hint="@string/lbl_adm_prodname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"/>
    <EditText
        android:id="@+id/edtPrice"
        android:hint="@string/lbl_adm_prodprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"/>
    <EditText
        android:id="@+id/edtDesc"
        android:hint="@string/lbl_adm_proddesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"/>
    <Button
        android:id="@+id/btnUpdate"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:text="@string/lbl_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>