<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrador.AdmincpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_prodtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_adm_prodtitle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/iv_imgProducto"
            android:layout_below="@+id/tv_prodtitle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_addphoto"
            android:layout_marginTop="50dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_imgProducto"
            android:id="@+id/et_prodname"
            android:hint="@string/lbl_adm_prodname"
            android:layout_centerHorizontal="true"
            android:ems="10"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_price"
            android:layout_below="@+id/et_prodname"
            android:hint="@string/lbl_adm_prodprice"
            android:layout_centerHorizontal="true"
            android:ems="10"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:id="@+id/et_description"
            android:layout_below="@+id/et_price"
            android:hint="@string/lbl_adm_proddesc"
            android:layout_centerHorizontal="true"
            android:ems="10"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add"
            android:layout_below="@+id/et_description"
            android:layout_centerHorizontal="true"
            android:minWidth="160dp"
            android:text="@string/lbl_add"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_list"
            android:layout_below="@+id/btn_add"
            android:layout_centerHorizontal="true"
            android:minWidth="160dp"
            android:text="@string/lbl_list"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>

    </RelativeLayout>

</ScrollView>