<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="3dp"
    android:background="#fff"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imgIcon"
            android:src="@mipmap/ic_launcher_round"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_row_name"
                        android:textSize="20sp"
                        android:textColor="#000"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_nameprod"
                        android:text="@string/lbl_row_nameprod"
                        android:textSize="20sp"
                        android:textColor="#000"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_row_price"
                        android:textSize="20sp"
                        android:textColor="#000"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_priceprod"
                        android:text="@string/lbl_row_priceprod"
                        android:textSize="20sp"
                        android:textColor="#000"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_row_desc"
                        android:textSize="20sp"
                        android:textColor="#000"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_descprod"
                        android:text="@string/lbl_row_descprod"
                        android:textSize="20sp"
                        android:textColor="#000"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>