<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:id="@+id/card_catalogo"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/lbl_main_desc5"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:background="@drawable/background_main"
                    android:src="@drawable/ic_store_black_24dp"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:text="@string/lbl_main_title5"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lbl_main_desc5"
                    android:padding="5dp"
                    android:textColor="@color/darkgray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/card_login"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/lbl_main_desc1"
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:background="@drawable/background_main"
                    android:src="@drawable/ic_mood_black_24dp"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:text="@string/lbl_main_title1"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lbl_main_desc1"
                    android:padding="5dp"
                    android:textColor="@color/darkgray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_promos"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/lbl_main_desc2"
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:background="@drawable/background_main"
                    android:src="@drawable/ic_card_giftcard_black_24dp"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:text="@string/lbl_main_title2"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lbl_main_desc2"
                    android:padding="5dp"
                    android:textColor="@color/darkgray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/card_recargas"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/lbl_main_desc3"
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:background="@drawable/background_main"
                    android:src="@drawable/ic_payment"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:text="@string/lbl_main_title3"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lbl_main_desc3"
                    android:padding="5dp"
                    android:textColor="@color/darkgray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_ayuda"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/lbl_main_desc4"
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:background="@drawable/background_main"
                    android:src="@drawable/ic_help_black_24dp"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:text="@string/lbl_main_title4"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lbl_main_desc4"
                    android:padding="5dp"
                    android:textColor="@color/darkgray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>